concord_macros/tests/dsl/fail/fail_unknown_retry_profile_endpoint.rs
use concord_macros::api;

api! {
    client UnknownRetryProfileEndpointApi {
        base "https://example.com"
    }

    GET Ping
    path ["ping"]
    retry missing
    -> Text<String>
}

fn main() {}
